<resources>
    <string name="app_name">App Dev Project</string>
    <string name="scan_qr_code">Scan Product</string>
    <string name="item_id"> %d </string>
    <string name="item_name">%s</string>
    <string name="quantity"> x%d</string>
    <string name="undo">Undo</string>
    <string name="damaged">Damaged</string>
    <string name="count_damaged">%d Damaged</string>
    <string name="not_damaged">Not Damaged</string>
    <string name="view_full_list">View Full List</string>
    <string name="scan_start">Scan an item to get started</string>
    <string name="invalid_item">Item not found</string>
    <string name="title_activity_scanned_item">ScannedItem</string>
    <string name="flag">%s</string>
    <string name="enter_shipment_id">Enter shipment ID</string>
    <string name="shipment_id">Shipment ID</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="enter_product_code">Enter Product Code</string>
    <string name="product_code">Product Code</string>
    <string name="delete_item">Delete %s from the log?</string>
    <string name="title_activity_manifest_scan">Leanback ManifestScanActivity</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="scan_manifest_qr_code">Scan Manifest QR Code</string>
    <string name="manual_manifest_id_entry">Enter Manifest ID manually</string>
    <string name="receivedCount">%d/%d</string>
    <string name="itemID">%d</string>
    <string name="description">Description</string>
    <string name="itemDescription">%s</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
</resources>