<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <Button
        android:id="@+id/scanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_qr_code" />

    <Button
        android:id="@+id/undoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/undo" />

    <include
        layout="@layout/item_layout"
        android:id="@+id/item_view"
         />

    <Button
        android:id="@+id/fullList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_full_list" />

</LinearLayout>