<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="128dp">

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/itemName"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:text="@string/item_name"
        android:layout_marginEnd="20dp"
        android:maxLines="1"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/itemID"
        android:layout_below="@+id/itemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/item_id"
        android:textSize="16sp"/>

    <CheckBox android:id="@+id/damaged"
        android:layout_below="@+id/itemID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/damaged"/>

    <TextView
        android:id="@+id/cardBorder"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_alignParentBottom="true"
        android:background="#808080"/>
</RelativeLayout>