<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/scan_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:maxLines="2"
            android:padding="18dp"
            android:text="@string/enter_shipment_id"
            android:textAlignment="center"
            android:textColor="@color/dark_grey"
            android:textSize="30sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textfield1"
            android:padding="18dp"
            android:layout_margin="10dp"
            android:textColor="@color/dark_grey"
            android:textSize="20sp"
            android:hint="@string/enter_shipment_id"
            android:textColorHint="@color/light_grey"
            android:inputType="number"
            android:id="@+id/shipmentID"
            >

        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/finishButton"
                android:layout_width="212dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="3"
                android:background="@drawable/button2"
                android:padding="18dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />
            <Button
                android:id="@+id/finishButton"
                android:layout_width="212dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="3"
                android:background="@drawable/button1"
                android:padding="18dp"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>