<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/login_background"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="20dp"
    >


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintDimensionRatio="w,1:1">

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button3"
                android:padding="18dp"
                android:text="X"
                android:textAllCaps="false"
                android:textColor="@color/dark_grey"
                android:textSize="20sp"
                app:layout_constraintDimensionRatio="w,1:1" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <Button
            android:id="@+id/undoButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:layout_weight="3"
            android:background="@drawable/button2"
            android:padding="18dp"
            android:text="@string/undo"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/finishButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_weight="3"
            android:background="@drawable/button1"
            android:padding="18dp"
            android:text="Finish    >"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="539dp"
        android:layout_above="@+id/linearLayout3"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="0dp">

        <include
            android:id="@+id/start"
            layout='@layout/start_layout' />

        <include
            android:id="@+id/scannedItem"
            layout='@layout/item_layout'
            android:visibility="gone" />

        <include
            android:id="@+id/invalidItem"
            layout="@layout/invalid_item_layout"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/scannedList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="33dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/manualButton"
            tools:layout_editor_absoluteX="16dp">


            <Button
                android:id="@+id/fullList"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/button2"
                android:padding="18dp"
                android:text="@string/view_full_list"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/scanButton"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/button1"
                android:padding="18dp"
                android:text="@string/scan_qr_code"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

        <Button
            android:id="@+id/manualButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button3"
            android:padding="18dp"
            android:text="Enter Code Manually"
            android:textAllCaps="false"
            android:textColor="@color/green"
            android:textSize="20sp" />
    </LinearLayout>


</RelativeLayout>